@@ -66,7 +66,7 @@
           <driver>AGG/PNG</driver>
           <extension>png</extension>
           <formatOption>TILED=YES</formatOption>
-          <imageMode>RGB</imageMode>
+          <imageMode>RGBA</imageMode>
           <mimeType>image/png</mimeType>
           <transparent>ON</transparent>
         </OutputFormat>
